// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Dt checkGrammar=false 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt checkGrammar=true 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt checkHighlight=false 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt checkHighlight=true 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt checkSpaces=false 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt checkSpaces=true 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt className="my-classname" 1`] = `
<dt
  className="uu5-bricks-dt my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt content="This is Content from ContentMixin" 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</dt>
`;

exports[`UU5.Bricks.Dt content=12345 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</dt>
`;

exports[`UU5.Bricks.Dt controlled=false 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt controlled=true 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt default props 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt disabled=false 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt disabled=true 1`] = `
<dt
  className="uu5-bricks-dt uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</dt>
`;

exports[`UU5.Bricks.Dt dynamic=false 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt dynamic=true 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt hidden=false 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt hidden=true 1`] = `
<dt
  className="uu5-bricks-dt uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt id="myId" 1`] = `
<dt
  className="uu5-bricks-dt"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt ignoreHTML=false 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt ignoreHTML=true 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt is inner bricks.dt Bricks.Dt is root to: UU5.Bricks.Dt 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Dt
    content="Dwarf"
    id="uuID02"
    key="uuID02"
  />
  <Dd
    content="The small man with funny hat"
    id="uuID03"
    key="uuID03"
  />
  <Dt
    content="Red Dwarf"
    id="uuID04"
    key="uuID04"
  />
  <Dd
    content="Small star, or large space ship from british sitcom."
    id="uuID05"
    key="uuID05"
  />
</dl>
`;

exports[`UU5.Bricks.Dt mainAttrs=undefined 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt name="myName" 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt noIndex=false 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt noIndex=true 1`] = `
<dt
  className="uu5-bricks-dt uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt selected=false 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt selected=true 1`] = `
<dt
  className="uu5-bricks-dt uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt style="padding:8px; borderRadius: 2px" 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Dt style={"backgroundColor":"red","color":"blue"} 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Dt textCorrector=false 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt textCorrector=true 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt tooltip="My Tooltip" 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
